gccida/c0/expunge_block_nocompact
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expunge_block_nocompact/src/cfg.c:689:23: error: use of undeclared identifier 'basic_block_def'; did you mean 'basic_block_info'?
memset( b, 0, sizeof( basic_block_def)); 
                      ^~~~~~~~~~~~~~~
                      basic_block_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expunge_block_nocompact/src/cfg.c:78:13: note: 'basic_block_info' declared here
varray_type basic_block_info;
            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expunge_block_nocompact/src/obj/cfg.o] Error 1
